FPVTL-1305 noticed code was using phone number instead of sols phone number and linter fix on that collect code too